the change. The entry should contain a summary of the ABI changes made,
including what symbols were added, removed, or changed.

To generate a summary, re-generate the new ABI list using the
`generate-cxx-abilist` target, and look at the diff.

New entries should be added directly below the "Version" header.

------------
Version 18.0
------------

* [libc++] Remove symbol for std::system_error from the dylib

  This patch removes a symbol defined in the library for std::system_error.
  The symbol '__init' was defined as a private static function as part of the
  system_error class and was never visible. The addition of this symbol to the ABI was most likely accidental.
  The function '__init' is replaced by another equivalent function which is placed in the
  anonymous namespace of the std::system_error source code file.
  There are no internal references to this symbol which seems to support the reasoning that
  this was never used outside of the dylib.
  The deletion of the symbol should not be a breaking change.

All platforms
  -------------
  Symbol removed: _ZNSt3__112system_error6__initERKNS_10error_codeENS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEE

------------
Version 17.0
------------

* [libc++] Remove symbols for a std::allocator_arg & friends from the dylib

  This patch removes the symbols defined in the library for std::allocator_arg,
  std::defer_lock, std::try_to_lock, std::adopt_lock, and std::piecewise_construct.
  Those were defined in the library because we provided them in C++03 as an
  extension, and in C++03 it was impossible to define them as `constexpr`
  variables, as required by the Standard.

  This is technically an ABI break since we are removing symbols from the
  library. However, in practice, only programs compiled in C++03 mode that
  take the address of those objects (or pass them as a reference) will have
  an undefined ref to those symbols. In practice, this is expected to be